# CS-499-ePortfolio

docs/: _config.yml  code-review.md  index.md
docs/_includes/: nav.html
docs/artifacts/: exceptions.md
docs/includes/: nav.html
enhanced_artifact/: CMakeLists.txt
enhanced_artifact/sql/: exceptions_schema.sql
enhanced_artifact/src/: BatchProcessor.cpp  BatchProcessor.h  DB.cpp  DB.h  Exceptions.cpp  Exceptions.h  Logger.cpp  Logger.h
enhanced_artifact/tests/: test_exceptions.cpp
original_artifact/: Exceptions.cpp  Exceptions.ilk  Summary_4-1.docx
